--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,21 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 @layer components {
   .diagonal-lines-cyan {
     background-color: #000000;
