--- a/app/globals.css
+++ b/app/globals.css
@@ -99,6 +99,18 @@ body {
       #00000000 50%
     );
   }
+  .diagonal-lines-black {
+    background-color: #000000;
+    opacity: 1;
+    background-size: 7px 7px;
+    background-image: repeating-linear-gradient(
+      45deg,
+      #000000 0,
+      #000000 0.7000000000000001px,
+      #00000000 0,
+      #00000000 50%
+    );
+  }
 
   .polka {
     background-color: #000000;
