--- a/app/globals.css
+++ b/app/globals.css
@@ -162,3 +162,30 @@ body {
     );
   }
 }
+
+/* scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffe600;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffe600;
+}
+
+::-webkit-scrollbar-button {
+  height: 10px;
+}
